# hackindle

./: .gitignore  .pre-commit-config.yaml  detect_edge.py  detect_rectangle.py  main.py  pyproject.toml  utils.py
